tests/src/frontend/syntax/invalid/invalid_if.sk
fun test(): void {
  if true {
    void
  } else {
    void
  }
}
